--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://website.xhanzi.com
+baseURL: https://xhanzi.github.io/website/
 languageCode: en-us
 title: 学汉字 | xhanzi.com
 theme: hugo-fresh
