--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: https://website.xhanzi.com/
 languageCode: en-us
-title: 学汉字 | xhanzi.com | 平台建设中 | The website is under construction
+title: 学汉字 xhanzi.com | <Under Development>
 theme: hugo-fresh
 googleAnalytics: UA-64222683-2 # Put in your tracking code without quotes like this: UA-XXXXXX...
 
@@ -29,7 +29,7 @@ params:
     # Main hero title
     title: 在线学汉字
     # Hero subtitle (optional)
-    subtitle: 通过在线互动平台发现汉字趣味
+    subtitle: 走进汉字家族  让识字更有趣
     # Button text
     buttontext: 免费加入
     # Where the main hero button links to
@@ -38,8 +38,8 @@ params:
     image: illustrations/worker.svg
   # Customizable navbar. For a dropdown, add a "sublinks" list.
   navbar:
-  - title: 关于我们
-    url: /about/
+  - title: 课程体系
+    url: /description/
   - title: 在线资源
     sublinks:
     - title: 汉字乐园
@@ -63,33 +63,36 @@ params:
     tiles:
     - title: 汉字小助手
       icon: doc-sync
-      text: 汉字学习工具书，AI加持汉字书写辅助，掌握汉语应用
+      text: 汉字笔顺演示、有声词卡，AI加持汉字书写辅助
       url: /
       buttonText: 免费加入
     - title: 交互课堂
       icon: laptop-globe
-      text: 加入在线课堂，系统学习汉字文化
+      text: 加入在线课堂，和专业教师通过直播互动的方式学汉字
       url: /
       buttonText: 免费加入
     - title: 汉字乐园
       icon: plug-cloud
-      text: 更多课后汉字视频和小游戏，更多资源边玩边学
+      text: 汉字手工、闯关游戏、有声绘本，更多资源体验汉字乐趣
       url: /
       buttonText: 免费加入
   section2:
-    title: You're here because you want the best
-    subtitle: And we know it
+    title: 学汉字 xhanzi.com
+    subtitle: 是专门针对海外华裔少儿的在线汉字学习平台
     features:
-    - title: Powerful and unified interface
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+    - title: AI助力汉字教与学，H5打造互动教学资源
+      text: 自主研发AI程序可以对汉字习作进行自动批阅、学情分析，辅助教师精准施教，实现教学相长。力推H5 汉字教学资源的制作，跨平台轻松实现趣味十足的交互教学活动。
       # Icon (from /images/illustrations/icons/___.svg)
       icon: laptop-globe
-    - title: Cross-device synchronisation
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+    - title: “场景教学”、“字源追溯”让学汉字更有意思
+      text: 在符合语言学习规律之上，推出场景式教学方案。与课程同步的丰富场景，让汉字教学走进孩子们的日常，力求识用结合。同时从象形字入手，识字就像看图画，轻松又有趣。
       icon: doc-sync
-    - title: Nomad system
-      text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+    - title: 识字与听说读写结合、识字与中国文化结合
+      text: 本着“字不离词、词不离句、句不离篇”随文识字的理念，将汉字学习融入到经典文本的认读写训练中，重复渐进。培养汉字思维，体会汉字魅力。 
       icon: mobile-feed
+    - title: 学汉字做手工
+      text: 依据汉字的多变结构和造型，推出系列充满表现力的汉字手工游戏。孩子们可以动手把汉字变成一件件趣味十足的艺术品，换个角度学汉字。
+      icon: plug-cloud
   section3:
     title: 在线学习平台
     subtitle: 一站式学习、练习和寓教于乐平台
@@ -113,7 +116,7 @@ params:
       icon: wechat
     - link: https://insatgram.com
       icon: instagram
-    bulmalogo: true
+    bulmalogo: false
     quicklinks:
       column1:
         title: 关于
