--- a/config.yaml
+++ b/config.yaml
@@ -86,7 +86,7 @@ params:
     - title: 识字与听说读写结合、识字与中国文化结合
       text: 本着“字不离词、词不离句、句不离篇”随文识字的理念，将汉字学习融入到经典文本的认读写训练中，重复渐进。培养汉字思维，体会汉字魅力。 
       icon: mobile-feed
-    - title: 学汉字做手工，换个角度学汉字
+    - title: 学做汉字手工，换个角度学汉字
       text: 依据汉字的多变结构和造型，推出系列充满表现力的汉字手工游戏。孩子们可以动手把汉字变成一件件趣味十足的艺术品。
       icon: plug-cloud
   section3:
