--- a/config.yaml
+++ b/config.yaml
@@ -29,7 +29,7 @@ params:
     # Main hero title
     title: 在线学汉字
     # Hero subtitle (optional)
-    subtitle: 通过在线直播教学，实现教师、学生之间的即时互动，还原真实课堂感，小伙伴们一起学习更快乐。
+    subtitle: 通过在线直播教学，实现教师、学生之间的即时互动，还原真实课堂，小伙伴们一起学习更快乐。
     # Button text
     buttontext: 免费加入
     # Where the main hero button links to
